--- a/third.html
+++ b/third.html
@@ -9,5 +9,7 @@
 <body>
     <p>Nabid Hasan</p>
     <h1>Roll:1832</h1>
+    <h2>Code is updated</h2>
+    <strong>I want to update repo with new codes</strong>
 </body>
 </html>
