--- a/third.html
+++ b/third.html
@@ -11,5 +11,7 @@
     <h1>Roll:1832</h1>
     <h2>Code is updated</h2>
     <strong>I want to update repo with new codes</strong>
+    <small>Third commit </small>
+    <p>Want to add 3rd commit</p>
 </body>
 </html>
